<resources>
    <string name="app_name">Popular Movies</string>
    <string name="action_sort">Sort</string>
    <string name="action_about">About</string>
    <string name="title_activity_movie_detail">MovieDetailActivity</string>
    <string name="action_sort_by_most_popular">Sort by popularity</string>
    <string name="action_sort_by_highest_rated">Sort by rating</string>
    <string name="pref_poster_sort_key" translatable="false">posterSort</string>
    <string name="licenses_and_attributions">Licenses and attributions</string>
    <string name="library_picasso" translatable="false">Picasso</string>
    <string name="license_picasso" translatable="false">Copyright 2013 Square, Inc.

Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="attribution_tmdb" translatable="false">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>
    <string name="content_description_tmdb_logo">themoviedb.org</string>
</resources>
